--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,5 @@ language: swift
 osx_image: xcode11
 
 script:
-  - xcodebuild test -project YOUR_PROJECT_DIRECTORY.xcodeproj -scheme YOUR_PROJECT_SCHEME -destination "platform=iOS Simulator,name=iPhone 7" -sdk iphonesimulator11.0 CODE_SIGNING_REQUIRED=NO
+  - xcodebuild test -project CIRest.xcodeproj -scheme CIRest -destination "platform=iOS Simulator,name=iPhone 7" -sdk iphonesimulator11.0 CODE_SIGNING_REQUIRED=NO
 First, we specify the language. Type objective-c, even if you're using Swift. Next, we sa
