--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
-language: swift
-osx_image: xcode11
+language: objective-c
+osx_image: xcode11.1
 
 script:
   - xcodebuild test -project CIRest.xcodeproj -scheme CIRest -destination "platform=iOS Simulator,name=iPhone 7" -sdk iphonesimulator11.0 CODE_SIGNING_REQUIRED=NO
