--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
 language: swift
 osx_image: xcode10  
 script:
-- xcodebuild -workspace CIRest.xcodeproj -scheme CIRest -derivedDataPath BUILDPATH -destination 'platform=iOS Simulator,OS=12.0,name=iPhone 7' -enableCodeCoverage YES clean build test
+- xcodebuild -workspace CIRest.xcodeproj -scheme CIRest -derivedDataPath BUILDPATH -destination 'platform=iOS Simulator,OS=12.0,name=iPhone 7' -enableCodeCoverage NO clean build test
