--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
-
 language: swift
-xcode_scheme: CIRest
-xcode_destination: platform=iOS Simulator,OS=10.1,name=iPad Pro (9.7-inch)
+osx_image: xcode11
+script:
+- xcodebuild -scheme CIRest -derivedDataPath CIRest.xcodeproj -destination 'platform=iOS Simulator,OS=12.0,name=iPhone 7' -enableCodeCoverage NO clean build test
+
